@@ -87,6 +87,8 @@ Version History
 * Fixed a bug in ``version_creator`` UI where it was raising an IndexError
   while restoring the ui with a Version whose Project is not active anymore.
 
+* ``version_creator`` now shows the Projects in sorted order.
+
 0.2.1
 -----
 
